First pass before cleanup